--- a/src/components/PokemonData.css
+++ b/src/components/PokemonData.css
@@ -1,12 +1,16 @@
-.electric {
-  background-color: yellow;
-}
 .pokemon-info {
+  width: 80%;
+  margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: 50px 300px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 50px 400px;
   text-align: center;
   align-items: center;
+  text-transform: capitalize;
+  color: white;
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.8);
+  font-size: 1.5em;
+  gap: 20px;
   > :first-child {
     grid-column: 1 / -1;
   }
@@ -17,16 +21,23 @@
   > .pokemon-name {
     height: 30px;
   }
-  .pokemon-img,
-  .ability-info,
-  .held-items-info,
-  .type-info,
-  .stats-info {
-    grid-row-start: 2;
-  }
 }
 .pokemon-img {
   img {
-    width: 250px;
+    width: 100%;
+    height: 100%;
   }
+}
+.element {
+  border: 1px solid white;
+  background-color: rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  border-radius: 15px;
+  padding: 20px 10px;
+}
+.ability-info,
+.held-items-info,
+.type-info element {
+  margin-bottom: 30px;
 }
