--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -3,4 +3,61 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  input {
+    height: 100px;
+    width: 60%;
+    border-radius: 15px;
+    color: white;
+  }
+}
+.pokemon-search input {
+  text-align: center;
+  font-size: 1.5em;
+  border: 1px solid white;
+  background-color: rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+}
+.pokemon-search input::placeholder {
+  color: white;
+}
+.pokemon-search input:focus-visible {
+  outline: none;
+}
+button {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  cursor: pointer;
+  color: white;
+  border: 3px solid black;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+  background: linear-gradient(
+    180deg,
+    rgba(240, 0, 0, 1) 50%,
+    rgba(0, 0, 0, 1) 50%,
+    rgba(0, 0, 0, 1) 55%,
+    rgba(255, 255, 255, 1) 55%
+  );
+  opacity: 0.85;
+  position: relative;
+  transition: 0.3s;
+}
+button:hover {
+  opacity: 1;
+}
+.dot {
+  background-color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  content: "";
+  border: 1px solid black;
 }
